benchmarks/verus/bignum/vericoder_glm_15-09_18h46/debug/bignum_ModExpPow2_Add_DivMod_iter2_error.log
=== Verification Error - Iteration 2 ===
File: /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/files/bignum_ModExpPow2_Add_DivMod.rs
Time: 2025-09-15 19:02:28

Full Error Output:
--------------------------------------------------------------------------------
Compilation failed: error[E0599]: `vstd::seq::Seq<char>` is not an iterator
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_Add_DivMod_impl.rs:42:44
   |
42 |                     ValidBitString(result@.rev()),
   |                                            ^^^ `vstd::seq::Seq<char>` is not an iterator
   |
   = note: the following trait bounds were not satisfied:
           `vstd::seq::Seq<char>: std::iter::Iterator`
           which is required by `&mut vstd::seq::Seq<char>: std::iter::Iterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.

--------------------------------------------------------------------------------

Additional Output:
error[E0599]: `vstd::seq::Seq<char>` is not an iterator
  --> /Users/sergiu.bursuc/baif/vericoding/benchmarks/verus/bignum/vericoder_glm_15-09_18h46/bignum_ModExpPow2_Add_DivMod_impl.rs:42:44
   |
42 |                     ValidBitString(result@.rev()),
   |                                            ^^^ `vstd::seq::Seq<char>` is not an iterator
   |
   = note: the following trait bounds were not satisfied:
           `vstd::seq::Seq<char>: std::iter::Iterator`
           which is required by `&mut vstd::seq::Seq<char>: std::iter::Iterator`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0599`.
